# oanda-py

./: .gitignore  Taskfile.yml  build.sh  convert.js  gen.sh  gen_data.py  oandav20.json  openapi-client-config.yml  openapi.yaml  package.json  pnpm-lock.yaml  pyproject.toml
oanda-v20-client/: README.md  pyproject.toml
oanda-v20-client/oanda_v20_client/api/default/: cancel_order.py  close_position.py  (+36 more)
oanda-v20-client/oanda_v20_client/models/: __init__.py  accept_datetime_format.py  account.py  account_changes.py  account_changes_state.py  account_financing_mode.py  account_guaranteed_stop_loss_order_mode.py  account_properties.py  account_summary.py  account_summary_guaranteed_stop_loss_order_mode.py  calculated_account_state.py  calculated_position_state.py  calculated_trade_state.py  cancel_order_response_200.py  cancel_order_response_404.py  cancellable_order_type.py  candlestick.py  candlestick_data.py  candlestick_granularity.py  client_configure_reject_transaction.py  client_configure_reject_transaction_reject_reason.py  client_configure_reject_transaction_type.py  client_configure_transaction.py  client_configure_transaction_type.py  client_extensions.py  client_price.py  client_price_status.py  close_position_body.py  close_position_response_200.py  close_position_response_400.py  close_position_response_404.py  close_trade_body.py  close_trade_response_200.py  close_trade_response_400.py  close_trade_response_404.py  close_transaction.py  close_transaction_type.py  configure_account_body.py  configure_account_response_200.py  configure_account_response_400.py  (+331 more)
(+3 files in other folders)
